--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#4a90e2</color>
     <color name="colorPrimaryDark">#6da1df</color>
     <color name="colorAccent">#f5a623</color>
+    <color name="divisor">#cfcfcf</color>
 </resources>
