--- a/app/src/main/res/layout/fragment_investment.xml
+++ b/app/src/main/res/layout/fragment_investment.xml
@@ -3,6 +3,7 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="fund"
             type="com.dpelluzi.dynamicform.models.Fund"/>
@@ -43,8 +44,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:textStyle="bold"
                     android:text="@{fund.title}"
+                    android:textStyle="bold"
                     tools:text="Title"/>
 
                 <TextView
@@ -52,8 +53,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                     android:text="@{fund.fundName}"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                     tools:text="Fund Name Lorem Ipsum"/>
 
                 <View
@@ -67,8 +68,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:textStyle="bold"
                     android:text="@{fund.whatIs}"
+                    android:textStyle="bold"
                     tools:text="What is"/>
 
                 <TextView
@@ -84,9 +85,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
+                    android:text="@{fund.riskTitle}"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
-                    android:text="@{fund.riskTitle}"
                     tools:text="Risk title"/>
 
                 <TextView
@@ -94,9 +95,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
+                    android:text="@{fund.infoTitle}"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
-                    android:text="@{fund.infoTitle}"
                     tools:text="More info title"/>
 
                 <TableLayout
@@ -121,8 +122,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:gravity="end"
                             android:layout_weight="1"
+                            android:gravity="end"
                             android:text="@string/cdi"/>
                     </TableRow>
 
@@ -141,8 +142,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="end"
-                            android:textColor="@android:color/black"
                             android:text='@{fund.moreInfo.month.fund + "%"}'
+                            android:textColor="@android:color/black"
                             tools:text="4.5%"/>
 
                         <TextView
@@ -150,8 +151,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="end"
-                            android:textColor="@android:color/black"
                             android:text='@{fund.moreInfo.month.cdi + "%"}'
+                            android:textColor="@android:color/black"
                             tools:text="13.5%"/>
 
                     </TableRow>
@@ -159,18 +160,20 @@
                     <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
                             android:text="@string/year"/>
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="end"
-                            android:textColor="@android:color/black"
                             android:text='@{fund.moreInfo.year.fund + "%"}'
+                            android:textColor="@android:color/black"
                             tools:text="4.5%"/>
 
                         <TextView
@@ -178,8 +181,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="end"
-                            android:textColor="@android:color/black"
                             android:text='@{fund.moreInfo.year.cdi + "%"}'
+                            android:textColor="@android:color/black"
                             tools:text="13.5%"/>
                     </TableRow>
 
@@ -192,13 +195,14 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
                             android:text="@string/last12months"/>
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="end"
-                            android:textColor="@android:color/black"
                             android:text='@{fund.moreInfo.last12months.fund + "%"}'
+                            android:textColor="@android:color/black"
                             tools:text="4.5%"/>
 
                         <TextView
@@ -206,8 +210,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="end"
-                            android:textColor="@android:color/black"
                             android:text='@{fund.moreInfo.last12months.cdi + "%"}'
+                            android:textColor="@android:color/black"
                             tools:text="13.5%"/>
                     </TableRow>
                 </TableLayout>
@@ -217,6 +221,21 @@
                     android:layout_height="1dp"
                     android:layout_marginTop="24dp"
                     android:background="@color/divisor"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/fund_info_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    tools:listitem="@layout/row_fund_info"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/btn_send"
+                    android:text="@string/invest"
+                    android:textColor="@android:color/white"/>
 
             </LinearLayout>
 
